--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -19,17 +19,7 @@ jobs:
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
     - name: Install Dependencies
-      run: |    
-        
-        apt-get update
-        apt-get install curl unzip
-        apt-get install php php-curl
-        curl -sS https://getcomposer.org/installer -o composer-setup.php
-        php composer-setup.php --install-dir=/usr/local/bin --filename=composer
-        composer self-update 
-        composer -v
-        
-    
+      uses: php-actions/composer@v6
     - name: Generate key
       run: php artisan key:generate
     - name: Directory Permissions
