--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -18,8 +18,11 @@ jobs:
     - uses: actions/checkout@v3
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-    - name: Install Dependencies
+    - name: Install dependencies
       uses: php-actions/composer@v6
+      with:
+        php_version: "7.1"
+        version: 1
     - name: Generate key
       run: php artisan key:generate
     - name: Directory Permissions
